--- a/styles/global.css
+++ b/styles/global.css
@@ -192,6 +192,66 @@ button {
   position: relative;
 }
 
+.nav__link.lang {
+  cursor: pointer;
+}
+
+ul.lang {
+  position: absolute;
+}
+
+
+.nav__link.lang[data-lang="en"]::before {
+  content: '';
+  display: inline-block;
+  width: 25px;
+  height: 25px;
+  vertical-align: middle;
+  margin-right: 10px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-image: url('/flags/gb.svg');
+
+}
+
+.nav__link.lang[data-lang="fr"]::before {
+  content: '';
+  display: inline-block;
+  width: 25px;
+  height: 25px;
+  vertical-align: middle;
+  margin-right: 10px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-image: url('/flags/fr.svg');
+
+}
+.nav__link.lang[data-lang="ar"]::before {
+  content: '';
+  display: inline-block;
+  width: 25px;
+  height: 25px;
+  vertical-align: middle;
+  margin-right: 10px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-image: url('/flags/sa.svg');
+
+}
+.nav__link.lang[data-lang="es"]::before {
+  content: '';
+  display: inline-block;
+  width: 25px;
+  height: 25px;
+  vertical-align: middle;
+  margin-right: 10px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-image: url('/flags/es.svg');
+
+}
+
+
 .nav__link::after {
   position: absolute;
   left: 0;
@@ -665,6 +725,10 @@ button {
 }
 
 
+.lang-Wrapper{
+  display: flex;
+} 
+
 /* breakpoints style */
 /* breakpoints style */
 /* breakpoints style */
@@ -792,12 +856,23 @@ button {
       height: 100%;
       background-color: var(--container-color);
       transition: 0.4s;
-  
+      
       display: grid;
       justify-content: center;
       align-items: center;
     }
-  
+
+    ul.lang {
+      position: relative;
+    }
+     
+   
+
+    .lang-Wrapper{
+      display: flex;
+        flex-direction: column;
+    } 
+
     .nav__list {
       text-align: center;
       flex-direction: column;
@@ -1041,3 +1116,86 @@ button {
       zoom: 2;
     }
   }
+
+
+
+
+/* ////////////////////////////////////// */
+
+@keyframes loaderoutterAnimate {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+
+
+@keyframes loaderInnerAnimate {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(-360deg);
+        transform: rotate(-360deg);
+    }
+}
+
+.spinner {
+  text-align: center;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.spinner .section {
+    display: inline-block;
+    text-align: center;
+    min-height: 215px;
+    vertical-align: top;
+    margin: 1%;
+}
+
+.spinner .loader {
+    position: relative;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    margin: 75px;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.spinner .loaderOutter {
+    position: absolute;
+    border: 4px solid #fff;
+    border-left-color: transparent;
+    border-bottom: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    -webkit-animation: loaderoutterAnimate 1s cubic-bezier(0.42, 0.61, 0.58, 0.41) infinite;
+    animation: loaderoutterAnimate 1s cubic-bezier(0.42, 0.61, 0.58, 0.41) infinite;
+}
+
+.spinner .loaderInner {
+    position: absolute;
+    border: 4px solid #fff;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    left: calc(50% - 20px);
+    top: calc(50% - 20px);
+    border-right: 0;
+    border-top-color: transparent;
+    -webkit-animation: loaderInnerAnimate 1s cubic-bezier(0.42, 0.61, 0.58, 0.41) infinite;
+    animation: loaderInnerAnimate 1s cubic-bezier(0.42, 0.61, 0.58, 0.41) infinite;
+}
+
+
+
